--- a/poems_ch.html
+++ b/poems_ch.html
@@ -12,21 +12,60 @@
 		<li id="navbar_language"><a href="poems_en.html">EN</a></li>
 	</ul>
 	<div id="content" class="paper">
+		<article class="poem" style="min-height:60vh">
+			<div style="width:33%; float:left; border: 1px solid black; background-color: #b6eef0">
+				<h1>周庄 1</h1>
+				文/Maggie<br>
+				人们惬意地在门口闲聊<br>
+				游客们租了小船<br>
+				沿小河缓缓前行<br>
+				穿过有小桥的桥洞<br>
+				艄公们也是阳光的<br>
+				<br>
+				那天的阳光很好<br>
+				日子像初恋情人<br>
+				还刚刚开始<br>
+				所有人的脸上都没有愁苦<br>
+				灿烂地像手中的向日葵<br>
+				想一想，竟然是20年前<br>
+			</div>
+			<div style="width:33%; float:left; border: 1px solid black; background-color: #b6eef0">
+				<h1>周庄 2</h1>
+				文/Maggie<br>
+				人们惬意地在门口闲聊<br>
+				游客们租了小船<br>
+				沿小河缓缓前行<br>
+				穿过有小桥的桥洞<br>
+				艄公们也是阳光的<br>
+				<br>
+				那天的阳光很好<br>
+				日子像初恋情人<br>
+				还刚刚开始<br>
+				所有人的脸上都没有愁苦<br>
+				灿烂地像手中的向日葵<br>
+				想一想，竟然是20年前<br>
+			</div>
+			<div style="width:33%; float:left; border: 1px solid black; background-color: #b6eef0">
+				<h1>周庄 3</h1>
+				文/Maggie<br>
+				人们惬意地在门口闲聊<br>
+				游客们租了小船<br>
+				沿小河缓缓前行<br>
+				穿过有小桥的桥洞<br>
+				艄公们也是阳光的<br>
+				<br>
+				那天的阳光很好<br>
+				日子像初恋情人<br>
+				还刚刚开始<br>
+				所有人的脸上都没有愁苦<br>
+				灿烂地像手中的向日葵<br>
+				想一想，竟然是20年前<br>
+			</div>
+		</article>
 		<article class="poem">
-			<h1>周庄</h1>
+			<h1>ab</h1>
 			文/Maggie<br>
 			人们惬意地在门口闲聊<br>
-			游客们租了小船<br>
-			沿小河缓缓前行<br>
-			穿过有小桥的桥洞<br>
-			艄公们也是阳光的<br>
-			<br>
-			那天的阳光很好<br>
-			日子像初恋情人<br>
-			还刚刚开始<br>
-			所有人的脸上都没有愁苦<br>
-			灿烂地像手中的向日葵<br>
-			想一想，竟然是20年前<br>
 		</article>
 		<div id="poem_buttons">
 			<span id="previous_poem" onclick="previousPoem()">Previous</span>
